--- a/2-objects-classes-inheritance/pom.xml
+++ b/2-objects-classes-inheritance/pom.xml
@@ -4,13 +4,42 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-      <groupId>com.cooksys.ftd.assignments</groupId>
-      <artifactId>combined-assignments</artifactId>
-      <version>${ftd.assignments.version}</version>
-    </parent>
+    <groupId>com.cooksys.ftd.assignments</groupId>
+    <artifactId>day-two-objects</artifactId>
+    <version>1.0-SNAPSHOT</version>
 
-    <artifactId>2-objects-classes-inheritance</artifactId>
-    <version>${ftd.assignments.version}</version>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.pholser</groupId>
+            <artifactId>junit-quickcheck-core</artifactId>
+            <version>0.6.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.pholser</groupId>
+            <artifactId>junit-quickcheck-generators</artifactId>
+            <version>0.6.1</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
